# axum-nextjs-portal

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: create.rs  delete.rs  read.rs  update.rs
backend/src/models/: news.rs
frontend/: package-lock.json
frontend/app/: api.ts  layout.tsx
frontend/app/admin/: page.tsx
frontend/app/client/: page.tsx
frontend/styles/: admin.css
