[package]
name = "neur-web"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
axum = "0.8.9"                                    # Web framework kencang & simpel
sqlx = { version = "0.9.0", features = [ "postgres", "runtime-tokio", "tls-rustls", "chrono" ] } # Driver Postgres
serde = { version = "1.0", features = ["derive"] } # Buat konversi Struct Rust <-> JSON
chrono = { version = "0.4", features = ["serde"] } # Buat handle tipe data waktu
dotenvy = "0.15"                                # Buat baca file .env
tower-http = { version = "0.7.0", features = ["cors"] }